fixed reponsiveness on smaller screens #3
On devices with width less than 600px:

- set map width to 100%
- reduced table header/row padding to 6px

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .leaflet-container {
-  width: 80%;
-  height: 70vh;
-  margin: auto;
+    width: 80%;
+    height: 70vh;
+    margin: auto;
 }
+
+@media only screen and (max-width: 600px) {
+    .leaflet-container {
+        width: 100%;
+    }
+
+    .MuiTableCell-root.MuiTableCell-body,
+    .MuiTableCell-root.MuiTableCell-head {
+        padding: 6px;
+    }
+}
+
+
